--- a/app/templates/admin/_sidebar.html.twig
+++ b/app/templates/admin/_sidebar.html.twig
@@ -43,10 +43,24 @@
                    href="{{ path('app_profile') }}"
                    {% if app.request.attributes.get('_route') == 'app_profile' %}aria-current="page"{% endif %}
                    tabindex="0">
-                    <i class="fas fa-cog me-2" aria-hidden="true"></i>
-                    <span>{{ 'nav.settings'|trans }}</span>
+                    <i class="fas fa-user me-2" aria-hidden="true"></i>
+                    <span>{{ 'nav.profile'|trans }}</span>
                 </a>
             </li>
+            {% if app.user and app.user.account %}
+                {% set planType = app.user.account.planType %}
+                {% if planType.value == 'pro' or planType.value == 'enterprise' %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if app.request.attributes.get('_route') starts with 'app_branding' %}active{% endif %}" 
+                           href="{{ path('app_branding_configure') }}"
+                           {% if app.request.attributes.get('_route') starts with 'app_branding' %}aria-current="page"{% endif %}
+                           tabindex="0">
+                            <i class="fas fa-palette me-2" aria-hidden="true"></i>
+                            <span>{{ 'nav.branding'|trans }}</span>
+                        </a>
+                    </li>
+                {% endif %}
+            {% endif %}
         </ul>
         <div class="sidebar-footer p-3 border-top d-none d-lg-block">
             <button type="button" class="btn btn-link text-muted sidebar-collapse-btn w-100 text-start" aria-label="{{ 'nav.collapse'|trans|default('Collapse') }}" data-collapse-text="{{ 'nav.collapse'|trans|default('Collapse') }}" data-expand-text="{{ 'nav.expand'|trans|default('Expand') }}">
