:construction: Add TODO comment for JavaScript and template refactoring in configure.html.twig

--- a/app/templates/branding/configure.html.twig
+++ b/app/templates/branding/configure.html.twig
@@ -1,3 +1,4 @@
+{#TODO : REFACTO JS AND TEMPLATE #}
 {% extends 'base_admin.html.twig' %}
 
 {% block title %}{{ 'branding.title'|trans }} - Hermio{% endblock %}
